--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 							<!-- Header -->
 								<header id="header">
 									<a href="index.html" class="logo">
-									<ul class="icons">
+									<!-- <ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-									</ul>
+									</ul> -->
 								</header>
 
 							<!-- Banner -->
@@ -40,9 +40,9 @@
 											Hiwarkhedkar</h1>
 											<p>Web Developer and Graphic Designer</p>
 										</header>
-										<p>I'm currently a Computer Engineering undergraduate. Always ready to learn and work hard towards improving my skills!</p>
+										<p style="color: black;">I'm currently a Computer Engineering undergraduate. Always ready to learn and work hard towards improving my skills!</p>
 										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
+											<!-- <li><a href="#" class="button big">Learn More</a></li> -->
 										</ul>
 									</div>
 									<span class="image object">
@@ -53,7 +53,7 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Skills</h2>
+										<h2 id="skillsid">Skills</h2>
 									</header>
 									<div class="features">
 										<article>
@@ -127,39 +127,61 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Projects</h2>
+										<h2 id="projectsid">Projects</h2>
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/agrostats.png" alt="" /></a>
 											<h3>AgroStats</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<p>AgroStats is a project for farmers. It is an online platform for them to get the predicted crop patterns, tutorials and all the information related to agriculture.</p>
+											<ul> Technologies used:
+												<li>HTML</li>
+												<li>CSS</li>
+												<li>JavaScript</li>
+												<li>ReactJS</li>
+												<li>AI/ML</li>
+											</ul>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://nonzk.codesandbox.io/" target="_blank" class="button">Overview</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/report.png" alt="" /></a>
 											<h3>Report Management</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<p>Search Engine to search projects from the records along with CRUD operations.</p>
+											<ul> Technologies used:
+												<li>HTML</li>
+												<li>CSS</li>
+												<li>JavaScript</li>
+												<li>ReactJS</li>
+												<li>AI/ML</li>
+											</ul>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://drive.google.com/file/d/1o6pSwjYmd65Qd3B-rlSgY0a_STdlyB6s/view?usp=sharing" target="_blank" class="button">Overview</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/wholesale.png" alt="" /></a>
 											<h3>Stock Exact</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<p>Wholesale Management (inventory management system) showing the stocks and products for suppliers and customers along with few features.</p>
+											<ul> Technologies used:
+												<li>HTML</li>
+												<li>CSS</li>
+												<li>JavaScript</li>
+												<li>ReactJS</li>
+												<li>MySQL</li>
+												<li>PHP</li>
+											</ul>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://drive.google.com/file/d/1CEHLjkMbDO3yMSIYk6hPUJIRGDV6lNkb/view?usp=sharing" target="_blank" class="button">Overview</a></li>
 											</ul>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3>Court Management</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<p>Manage the activities and paperwork in the court.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="#" class="button">Overview</a></li>
 											</ul>
 										</article>
 									</div>
@@ -188,7 +210,7 @@
 										<li><a href="index.html">Homepage</a></li>
 										<!-- <li><a href="generic.html">Generic</a></li>
 										<li><a href="elements.html">Elements</a></li> -->
-										<li>
+										<!-- <li>
 											<span class="opener">Submenu</span>
 											<ul>
 												<li><a href="#">Lorem Dolor</a></li>
@@ -207,15 +229,15 @@
 												<li><a href="#">Tempus Magna</a></li>
 												<li><a href="#">Feugiat Veroeros</a></li>
 											</ul>
-										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
+										</li> -->
+										<li><a href="#skillsid">Skills</a></li>
+										<li><a href="#projectsid">Projects</a></li>
+										<!-- <li><a href="#">Amet Lacinia</a></li> -->
 									</ul>
 								</nav>
 
 							<!-- Section -->
-								<section>
+								<!-- <section>
 									<header class="major">
 										<h2>Ante interdum</h2>
 									</header>
@@ -236,26 +258,27 @@
 									<ul class="actions">
 										<li><a href="#" class="button">More</a></li>
 									</ul>
-								</section>
+								</section> -->
 
 							<!-- Section -->
 								<section>
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p></p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
-										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										<li class="icon solid fa-envelope"><a href = "mailto: hiwarkhedkarsharayu@gmail.com">hiwarkhedkarsharayu@gmail.com</a></li>
+										<li class="icon brands fa-github"><a href="https://github.com/sharayuH">sharayuH</a></li>
+										<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/sharayu-hiwarkhedkar-996a8b1b0/">Sharayu Hiwarkhedkar</a></li>
+										<!-- <li class="icon solid fa-home">1234 Somewhere Road #8254<br />
+										Nashville, TN 00000-0000</li> -->
 									</ul>
 								</section>
 
 							<!-- Footer -->
-								<footer id="footer">
+								<!-- <footer id="footer">
 									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-								</footer>
+								</footer> -->
 
 						</div>
 					</div>
